Arreglo img, ajuste tamaño

--- a/estilos.css
+++ b/estilos.css
@@ -29,8 +29,8 @@
     .imagen {
     display: block;
     margin: 10px;
-    max-width: 100px;
-    height: auto;
+    max-width: 200px;
+    height: 200px;
     border-radius: 50%;
     object-fit: cover;
     }
