--- a/estilos.css
+++ b/estilos.css
@@ -15,9 +15,12 @@
         border: 4px solid rgb(57, 2, 2);
         background-color: rgb(85, 21, 21);
         color: white;
-        display: flex;         
+        box-shadow: 6px rgb(255, 255, 255);
         justify-content: center;
         padding: 4px;
+    }
+    .contenedor{
+        display: flex; 
     }
 
     .columna{
@@ -33,4 +36,14 @@
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
+    }
+
+    .fot{
+        align-items: center;
+        text-align: center;
+    }
+
+    .links{
+        align-items: center;
+        display: flex;
     }
