--- a/estilos.css
+++ b/estilos.css
@@ -19,6 +19,7 @@
         justify-content: center;
         padding: 4px;
     }
+
     .contenedor{
         display: flex; 
     }
@@ -50,6 +51,15 @@
     .links a:hover {
     color: #d30000;
 }
-    .boton{
+
+    .conmini{
         align-items: center;
+                justify-content: center;
+
+    }
+    .boton{
+        background-color: #f1cbcb;
+    }
+    @media screen {  
+        
     }
